feat: add header

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Online zoo</title>
-</head>
+  </head>
 
-<body>
-    <header class="header"></header>
+  <body>
+    <header class="header">
+      <div class="heading--hidden">
+        <h1>online zoo</h1>
+      </div>
+      <div class="container">
+        <div class="header__content">
+          <a href="#">
+            <img class="logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+          </a>
+          <nav class="navigation">
+            <ul class="menu">
+              <li class="menu__item">
+                <a class="menu__link" href="">about</a>
+                <a class="menu__link" href="/pages/map/map.html">map</a>
+                <a class="menu__link" href="/pages/zoos/zoos.html">zoos</a>
+                <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
     <main class="content page__content">
-        <section class="watch-your-favourite-animal"></section>
-        <section class="how-it-works"></section>
-        <section class="pets-in-zoo"></section>
-        <section class="pay-and-feed"></section>
-        <section class="testimonials"></section>
+      <section class="watch-your-favourite-animal"></section>
+      <section class="how-it-works"></section>
+      <section class="pets-in-zoo"></section>
+      <section class="pay-and-feed"></section>
+      <section class="testimonials"></section>
     </main>
     <footer class="footer page__footer"></footer>
-</body>
-
+  </body>
 </html>
