refactor: add missing li tags to header nav

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -22,9 +22,17 @@
             <ul class="menu">
               <li class="menu__item">
                 <a class="menu__link" href="">about</a>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="/pages/map/map.html">map</a>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="/pages/zoos/zoos.html">zoos</a>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
               </li>
             </ul>
