--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -21,7 +21,7 @@
           <nav class="navigation">
             <ul class="menu">
               <li class="menu__item">
-                <a class="menu__link" href="">about</a>
+                <a class="menu__link menu__link--active" href="">about</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="/pages/map/map.html">map</a>
