refactor: change class names

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -40,13 +40,15 @@
         </div>
       </div>
     </header>
-    <main class="content page__content">
-      <section class="watch-your-favourite-animal"></section>
-      <section class="how-it-works"></section>
-      <section class="pets-in-zoo"></section>
-      <section class="pay-and-feed"></section>
-      <section class="testimonials"></section>
+    <main class="main">
+      <div class="main__content">
+        <section class="watch-your-favourite-animal"></section>
+        <section class="how-it-works"></section>
+        <section class="pets-in-zoo"></section>
+        <section class="pay-and-feed"></section>
+        <section class="testimonials"></section>
+      </div>
     </main>
-    <footer class="footer page__footer"></footer>
+    <footer class="footer"></footer>
   </body>
 </html>
