feat: add Watch your favorite animal online block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -41,13 +41,20 @@
       </div>
     </header>
     <main class="main">
-      <div class="main__content">
-        <section class="watch-your-favourite-animal"></section>
+        <div class="hero">
+          <div class="container">
+            <section class="watch-your-favourite-animal">
+                <p class="watch-your-favourite-animal__text">Watch your favorite animal ONLINE</p>
+              <div class="watch-your-favourite-animal__button">
+                <a class="button button--play" href="/pages/zoos/panda/panda.html"><img src="/assets/icons/button/button-play.svg" alt=""> Play</a>
+              </div>
+            </section>
+          </div>
+        </div>
         <section class="how-it-works"></section>
         <section class="pets-in-zoo"></section>
         <section class="pay-and-feed"></section>
         <section class="testimonials"></section>
-      </div>
     </main>
     <footer class="footer"></footer>
   </body>
