feat: add How it works block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -41,20 +41,49 @@
       </div>
     </header>
     <main class="main">
-        <div class="hero">
-          <div class="container">
-            <section class="watch-your-favourite-animal">
-                <p class="watch-your-favourite-animal__text">Watch your favorite animal ONLINE</p>
-              <div class="watch-your-favourite-animal__button">
-                <a class="button button--play" href="/pages/zoos/panda/panda.html"><img src="/assets/icons/button/button-play.svg" alt=""> Play</a>
-              </div>
-            </section>
-          </div>
+      <div class="hero">
+        <div class="container">
+          <section class="watch-your-favourite-animal">
+            <p class="watch-your-favourite-animal__text">Watch your favorite animal ONLINE</p>
+            <div class="watch-your-favourite-animal__button">
+              <a class="button button--play" href="/pages/zoos/panda/panda.html"><img src="/assets/icons/button/button-play.svg" alt="" /> Play</a>
+            </div>
+          </section>
         </div>
-        <section class="how-it-works"></section>
-        <section class="pets-in-zoo"></section>
-        <section class="pay-and-feed"></section>
-        <section class="testimonials"></section>
+      </div>
+      <section class="how-it-works">
+        <h2 class="heading">how it works</h2>
+        <div class="how-it-works__container">
+          <ul class="pets-images">
+            <li class="pets-images__image">
+              <img class="pets-images__image--eagle" src="/assets/images/pets-parallax/eagle.jpg" alt="eagle" />
+            </li>
+            <li class="pets-images__image">
+              <img class="pets-images__image--tiger" src="/assets/images/pets-parallax/tiger.jpg" alt="tiger" />
+            </li>
+            <li class="pets-images__image">
+              <img class="pets-images__image--panda" src="/assets/images/pets-parallax/panda.jpg" alt="panda" />
+            </li>
+            <li class="pets-images__image">
+              <img class="pets-images__image--monkey" src="/assets/images/pets-parallax/monkey.jpg" alt="monkey" />
+            </li>
+            <li class="pets-images__image">
+              <img class="pets-images__image--elephant" src="/assets/images/pets-parallax/elephant.jpg" alt="elephant" />
+            </li>
+          </ul>
+        </div>
+        <div class="pets-images__article">
+          <p class="pets-images__text">
+            The application Оnline zoo will allow you to watch zoos' and nature reserves' inhabitants in live. Currently, under video-surveillance are pandas in China, eagles on
+            Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska,
+            Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and
+            you want to please it with a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours. <br>We want to thank you for helping the animals and give you <a class="coupons__text" href="">discount coupons</a> from our partners.
+          </p>
+        </div>
+      </section>
+      <section class="pets-in-zoo"></section>
+      <section class="pay-and-feed"></section>
+      <section class="testimonials"></section>
     </main>
     <footer class="footer"></footer>
   </body>
