feat: add Pets in zoo block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -46,7 +46,7 @@
           <section class="watch-your-favourite-animal">
             <p class="watch-your-favourite-animal__text">Watch your favorite animal ONLINE</p>
             <div class="watch-your-favourite-animal__button">
-              <a class="button button--play" href="/pages/zoos/panda/panda.html"><img src="/assets/icons/button/button-play.svg" alt="" /> Play</a>
+              <a class="button button--play" href="/pages/zoos/panda/panda.html"><img src="/assets/icons/buttons/button-play.svg" alt="" /> Play</a>
             </div>
           </section>
         </div>
@@ -77,11 +77,105 @@
             The application Оnline zoo will allow you to watch zoos' and nature reserves' inhabitants in live. Currently, under video-surveillance are pandas in China, eagles on
             Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska,
             Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and
-            you want to please it with a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours. <br>We want to thank you for helping the animals and give you <a class="coupons__text" href="">discount coupons</a> from our partners.
+            you want to please it with a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours. <br />We want to thank you
+            for helping the animals and give you <a class="coupons__text" href="javascript:void(0);">discount coupons</a> from our partners.
           </p>
         </div>
       </section>
-      <section class="pets-in-zoo"></section>
+      <section class="pets-in-zoo">
+        <h2 class="heading">pets in zoo</h2>
+        <div class="pets-in-zoo__slider-box">
+          <button class="arrow arrow-left"><img src="/assets/icons/button/arrow-left.svg" alt="" /></button>
+          <div class="pets-in-zoo__cards">
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="/pages/zoos/panda/panda.html">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/panda.jpg" alt="panda" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Panda, China</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="/pages/zoos/alligator/alligator.html">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/alligator.jpg" alt="alligator" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Alligator, USA</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="/pages/zoos/gorilla/gorilla.html">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/gorilla.jpg" alt="gorilla" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Gorilla, Eastern DRC</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="javascript:void(0);">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/elephant.jpg" alt="elephant" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Elephant, South Africa</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="javascript:void(0);">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/polar-bear.jpg" alt="polar-bear" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Polar Bear, Canada</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="/pages/zoos/eagle/eagle.html">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/bald-eagle.jpg" alt="bald-eagle" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Bald eagle, USA</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="javascript:void(0);">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/arctic-snowy-owl.jpg" alt="arctic-snowy-owl" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Arctcic snowy owl, Alaska</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="pets-in-zoo__card-wrapper">
+              <a class="pets-in-zoo__card" href="javascript:void(0);">
+                <figure>
+                  <img class="card-image" src="/assets/images/pets-slider/penguin.jpg" alt="penguin" />
+                  <figcaption class="card__caption">
+                    <p class="card-name">Penguin, USA</p>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+          </div>
+          <button class="arrow arrow-right"><img src="/assets/icons/button/arrow-right.svg" alt="" /></button>
+        </div>
+        <div class="container">
+          <div class="pets-in-zoo__button">
+            <a class="button choose-your-animal__button" href="/pages/map/map.html">Choose your favourite</a>
+          </div>
+        </div>
+      </section>
       <section class="pay-and-feed"></section>
       <section class="testimonials"></section>
     </main>
