feat: add Pay and feed block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -85,7 +85,7 @@
       <section class="pets-in-zoo">
         <h2 class="heading">pets in zoo</h2>
         <div class="pets-in-zoo__slider-box">
-          <button class="arrow arrow-left"><img src="/assets/icons/button/arrow-left.svg" alt="" /></button>
+          <button class="arrow arrow-left"><img src="/assets/icons/buttons/arrow-left.svg" alt="" /></button>
           <div class="pets-in-zoo__cards">
             <div class="pets-in-zoo__card-wrapper">
               <a class="pets-in-zoo__card" href="/pages/zoos/panda/panda.html">
@@ -168,7 +168,7 @@
               </a>
             </div>
           </div>
-          <button class="arrow arrow-right"><img src="/assets/icons/button/arrow-right.svg" alt="" /></button>
+          <button class="arrow arrow-right"><img src="/assets/icons/buttons/arrow-right.svg" alt="" /></button>
         </div>
         <div class="container">
           <div class="pets-in-zoo__button">
@@ -176,7 +176,26 @@
           </div>
         </div>
       </section>
-      <section class="pay-and-feed"></section>
+      <section class="pay-and-feed">
+        <h2 class="heading">pay and feed</h2>
+        <div class="pay-and-feed__container">
+          <div class="pay-and-feed__icon">
+            <img class="icon" src="/assets/icons/pay/card.svg" alt="card" />
+            <p class="icon__caption">You can pay for a donation to any animal using your Credit/Debit card</p>
+          </div>
+          <div class="pay-and-feed__arrow">
+            <img class="icon" src="/assets/icons/pay/arrow.svg" alt="arrow" />
+          </div>
+          <div class="pay-and-feed__icon">
+            <img class="icon" src="/assets/icons/pay/zoo.svg" alt="zoo" />
+            <p class="icon__caption">Donations will go to the account of the zoo or nature reserve</p>
+          </div>
+          <div class="pay-and-feed__icon">
+            <img class="icon" src="/assets/icons/pay/panda.svg" alt="panda" />
+            <p class="icon__caption">The animal will receive a delicious treat during feeding hours</p>
+          </div>
+        </div>
+      </section>
       <section class="testimonials"></section>
     </main>
     <footer class="footer"></footer>
