feat: add Testimonials block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="container">
           <div class="pets-in-zoo__button">
-            <a class="button choose-your-animal__button" href="/pages/map/map.html">Choose your favourite</a>
+            <a class="button choose-your-favourite__button" href="/pages/map/map.html">Choose your favourite</a>
           </div>
         </div>
       </section>
@@ -196,7 +196,68 @@
           </div>
         </div>
       </section>
-      <section class="testimonials"></section>
+      <section class="testimonials">
+        <h2 class="heading">testimonials</h2>
+        <div class="testimonials__slider-box">
+          <button class="arrow arrow-left"><img src="/assets/icons/buttons/arrow-left.svg" alt="" /></button>
+          <div class="testimonials__slider__card-wrapper">
+            <div class="testimonials__slider__card">
+              <img class="person-image" src="/assets/images/testimonials/karen.jpg" alt="Karen" />
+              <div class="testimonials__caption">
+                <h3 class="person-name">Karen Maitland</h3>
+                <div class="person-donation">+$10</div>
+              </div>
+              <p class="card-text">
+                "Thank you so much for these wonderful live webcams of the eagles on Catalina Island. Being able to watch them in their natural habitat as opposed to zoos is so
+                wonderful. I cannot see myself ever being able to come up there to see them in person, so this is a great substitute. Thank you again."
+              </p>
+            </div>
+          </div>
+          <div class="testimonials__slider__card-wrapper">
+            <div class="testimonials__slider__card">
+              <img class="person-image" src="/assets/images/testimonials/sara.jpg" alt="Sara" />
+              <div class="testimonials__caption">
+                <h3 class="person-name">Sara Jones</h3>
+                <div class="person-donation">+$13</div>
+              </div>
+              <p class="card-text">
+                "A disability prevents me from enjoying the outdoors and travel like I used to do. I really enjoy all the live cams and can spend HOURS watching real-time
+                entertainment. Wild life style!"
+              </p>
+            </div>
+          </div>
+          <div class="testimonials__slider__card-wrapper">
+            <div class="testimonials__slider__card">
+              <img class="person-image" src="/assets/images/testimonials/alex.jpg" alt="Alex" />
+              <div class="testimonials__caption">
+                <h3 class="person-name">Alex Barden</h3>
+                <div class="person-donation">+$7</div>
+              </div>
+              <p class="card-text">
+                "Here's a huge "thank-you" from New Hampshire - you allow me to travel the world without ever leaving the comfort of my office chair. Jammies on and coffee cup in
+                hand, I am Phineas Fogg!!"
+              </p>
+            </div>
+          </div>
+          <div class="testimonials__slider__card-wrapper">
+            <div class="testimonials__slider__card">
+              <img class="person-image" src="/assets/images/testimonials/alene.jpg" alt="Alene" />
+              <div class="testimonials__caption">
+                <h3 class="person-name">Alene Ray</h3>
+                <div class="person-donation">+$18</div>
+              </div>
+              <p class="card-text">
+                "Thank you for all the knowledge, education, pleasure and happiness you have add to all our lives at no expense on our part. My humble thanks and gratitude are
+                being wished for all of you. I want to thank you and feed the animals a small reward"
+              </p>
+            </div>
+          </div>
+          <button class="arrow arrow-right"><img src="/assets/icons/buttons/arrow-right.svg" alt="" /></button>
+        </div>
+        <div class="testimonials__button">
+          <a class="button leave-feedback__button" href="/pages/map/map.html">Leave feedback</a>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
