feat: add footer

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -255,10 +255,68 @@
           <button class="arrow arrow-right"><img src="/assets/icons/buttons/arrow-right.svg" alt="" /></button>
         </div>
         <div class="testimonials__button">
-          <a class="button leave-feedback__button" href="/pages/map/map.html">Leave feedback</a>
+          <a class="button leave-feedback__button" href="javascript:void(0);">Leave feedback</a>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer-wrapper">
+        <div class="footer-background">
+          <img class="footer-background" src="/assets/images/footer/footer.svg" alt="">
+        </div>
+        <div class="footer-links">
+            <a href="#">
+              <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+            </a>
+          <div class="donate__button">
+            <a class="button button--donate" href="javascript:void(0);">Donate for volunteers</a>
+          </div>
+          <div class="footer-nav-block">
+            <nav class="footer-nav">
+              <ul class="menu footer-menu">
+                <li class="menu__item footer-menu-item"><a class="menu__link" href="#">about</a></li>
+                <li class="menu__item footer-menu-item"><a class="menu__link" href="#">contact us</a></li>
+                <li class="menu__item footer-menu-item"><a class="menu__link" href="/pages/map/map.html">map</a></li>
+                <li class="menu__item footer-menu-item"><a class="menu__link" href="/pages/map/map.html">feedback</a></li>
+              </ul>
+            </nav>
+          </div>
+          <address class="socials">
+            <ul class="social">
+              <li class="menu__item">
+                  <a class="menu__link" href="https://www.instagram.com">
+                    <img src="/assets/icons/socials/insta.svg" alt="">
+                  </a>
+              </li>
+              <li class="menu__item">
+                  <a class="menu__link" href="https://www.facebook.com">
+                    <img src="/assets/icons/socials/facebook.svg" alt="">
+                  </a>
+              </li>
+              <li class="menu__item">
+                  <a class="menu__link" href="https://www.twitter.com">
+                    <img src="/assets/icons/socials/twitter.svg" alt="">
+                  </a>
+              </li>
+              <li class="menu__item">
+                  <a class="menu__link" href="https://youtube.com">
+                    <img src="/assets/icons/socials/youtube.svg" alt="">
+                  </a>
+              </li>
+          </ul>
+          </address>
+        </div>
+        <div class="footer-credentials">
+          <div class="schools-logo">
+            <a class="rss-logo" href="javascript:void(0);"><img src="/assets/icons/logo/rss-logo.svg" alt=""></a>
+            <a class="yd-logo" href="javascript:void(0);"><img src="/assets/icons/logo/yd-logo.svg" alt=""></a>
+          </div>
+          <div class="footer-copyright">
+            <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
+            <div class="designer">Grigoreva Margarita</div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
