feat: add map and pets img

--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -41,9 +41,51 @@
       </div>
     </div>
   </header>
-  <main>
-    <div class="map container content">
-      <img src="/assets/map/map.svg" alt="">
+  <main class="main">
+    <div class="map-container">
+      <div class="map">
+        <img class="map-img" src="/assets/images/map/map.svg" alt="" />
+        <div class="map__pet map__pet--eagle">
+          <div class="map__icon-container map__icon-container--eagle">
+            <a class="map__link map__link--eagle" href="/pages/zoos/eagle/eagle.html">
+              <img class="map__icon map__icon--eagle" src="/assets/icons/pets/eagle.jpg" alt="eagle">
+            </a>
+          </div>
+          <div class="map__mark map__mark--eagle"></div>
+          <div class="map__tooltip map__tooltip--eagle"></div>
+          <div class="map__pet-name map__pet-name--eagle">eagle</div>
+        </div>
+        <div class="map__pet map__pet--alligator">
+          <div class="map__icon-container map__icon-container--alligator icon-active">
+            <a class="map__link map__link--alligator" href="/pages/zoos/eagle/alligator.html">
+              <img class="map__icon map__icon--alligator" src="/assets/icons/pets/alligator.jpg" alt="alligator">
+            </a>
+          </div>
+          <div class="map__mark map__mark--alligator"></div>
+          <div class="map__tooltip map__tooltip--alligator"></div>
+          <div class="map__pet-name map__pet-name--alligator">alligator</div>
+        </div>
+        <div class="map__pet map__pet--gorilla">
+          <div class="map__icon-container map__icon-container--gorilla">
+            <a class="map__link map__link--gorilla" href="/pages/zoos/eagle/gorilla.html">
+              <img class="map__icon map__icon--gorilla" src="/assets/icons/pets/gorilla.jpg" alt="gorilla">
+            </a>
+          </div>
+          <div class="map__mark map__mark--gorilla"></div>
+          <div class="map__tooltip map__tooltip--gorilla"></div>
+          <div class="map__pet-name map__pet-name--gorilla">gorilla</div>
+        </div>
+        <div class="map__pet map__pet--panda">
+          <div class="map__icon-container map__icon-container--panda">
+            <a class="map__link map__link--panda" href="/pages/zoos/eagle/panda.html">
+              <img class="map__icon map__icon--panda" src="/assets/icons/pets/panda.jpg" alt="panda">
+            </a>
+          </div>
+          <div class="map__mark map__mark--panda"></div>
+          <div class="map__tooltip map__tooltip--panda"></div>
+          <div class="map__pet-name map__pet-name--panda">panda bear</div>
+        </div>
+      </div>
     </div>
   </main>
   <footer class="footer">
